# codex-chat-bridge

./: .gitignore  ARCHITECTURE.md  README.md  REFACTOR_BENCHMARK.md  pyproject.toml
codex_chat_bridge/: __init__.py  app.py  config.py  errors.py  inline_think_sm.py  metrics.py  models.py  protocol_types.py  reasoning_policy.py  response_semantics.py  session_store.py  sse_utils.py  stream_chat_to_responses.py  stream_responses_state.py  tool_arguments.py  tool_context.py  transform_chat_to_responses.py  transform_responses_to_chat.py  upstream.py  upstream_compat.py  upstream_transport.py
codex_chat_bridge/api/: __init__.py  concurrency.py  errors.py  lifespan.py  middleware.py  policy.py  response_service.py  routes.py  session_save.py
docs/: alias-surface-validation.md  compatibility-smoke-matrix.md  phase-a-worktree-closure-checklist.md  production-refactor-delivery-plan.md  production-smoke.md  reasoning-policy-freeze.md  refactor-delivery-audit.md  release-rollout-checklist.md
scripts/: prune_logs.py
tests/: test_better_than_cpp.py  test_custom_tool_call.py  test_image_security.py  test_multiturn_tool_roundtrip.py  test_nested_namespace_tools.py  test_phase2_regression.py  test_protocol_improvements.py  test_reasoning_cache.py  test_reasoning_policy.py  test_request_validation_semantics.py  test_response_semantics.py  test_responses_to_chat_items.py  test_session_store.py  test_streaming_content_refusal_semantics.py  test_streaming_failure_semantics.py  test_tool_search_call.py  test_upstream_compat.py  test_upstream_retry.py  test_upstream_urls.py
(+39 files in other folders)
