[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-chat-bridge"
version = "0.1.0"
description = "Minimal transparent Responses-to-Chat bridge for single NewAPI upstream"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "httpx>=0.27",
  "sse-starlette>=2.1",
  "prometheus_client>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["codex_chat_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
